// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventListItem should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <article
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <div
          class="emotion-9 emotion-10"
        >
          <div
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <time
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 00:00
            </time>
          </div>
          – 
          <time
            datetime="2023-01-02T00:00:00.000Z"
          >
            02.01.2023 00:00
          </time>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 emotion-13"
        >
          Cool concert
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
        >
          This is a lead
        </p>
      </div>
    </article>
  </a>
</DocumentFragment>
`;

exports[`EventListItem should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <article
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3 emotion-4"
      />
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
            <time
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 00:00
            </time>
          </div>
          – 
          <time
            datetime="2023-01-02T00:00:00.000Z"
          >
            02.01.2023 00:00
          </time>
        </div>
        <h1
          class="MuiTypography-root MuiTypography-h4 emotion-11"
        >
          Cool concert
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
        >
          This is a lead
        </p>
      </div>
    </article>
  </a>
</DocumentFragment>
`;
